[package]
name = "tezt"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
description = "An extremely fast Python test runner, written in Rust."
license = "MIT"
repository = "https://github.com/BilagoNet/tezt"
keywords = ["python", "testing", "test-runner", "pytest"]
categories = ["development-tools::testing", "command-line-utilities"]

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
crossbeam-channel = "0.5"
ctrlc = "3"
dunce = "1"
fs-err = "3"
ignore = "0.4"
mimalloc = "0.1"
num_cpus = "1"
rayon = "1"
rustc-hash = "2"
# Pinned: 0.4.0 is the final release of the standalone parser (upstream now lives
# in Ruff). It handles match/except*/PEP 695; the one gap is PEP 701 same-quote
# f-strings, where collection falls back to importing the file. See src/collect.rs.
rustpython-parser = "=0.4.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
# Parses pyproject.toml's [tool.tezt] for project defaults (addopts/testpaths/
# markers). See src/config.rs — parsing is best-effort and never fails the run.
toml = "0.8"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

# Windows: a Job Object (kill-on-job-close) is how we guarantee no worker — or a
# subprocess a test spawned — outlives tezt, the equivalent of unix process
# groups. See the `winjob` module in src/runner.rs.
[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_System_JobObjects",
    "Win32_System_Threading",
] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"

[profile.release]
lto = true
codegen-units = 1
strip = true
